Added sample configuration.

--- a/sample.ini
+++ b/sample.ini
@@ -112,8 +112,7 @@ formatter = generic
 
 [handler_iPhone]
 class = ProwlHandler
-args = ('46c...055','Pygios','reiliel.local')
-# ('PROWL-API-KEY', 'Application Name', 'Alert Title; hostname')
+args = ('KEY_HERE','Pygios','reiliel.local')
 level = OK
 formatter = prowl
 
